<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signin"
    tools:context=".views.LoginActivity">

    <!-- Tiêu đề Đăng nhập -->
    <!-- Author: nnhiep 09.03.2023 -->
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <!-- Input Tên người dùng -->
    <!-- Author: nnhiep 09.03.2023 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_below="@id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:startIconTint="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        android:hint="@string/username"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:textColorHint="@color/alto"
        app:hintTextColor="@color/white"
        app:boxBackgroundColor="@color/placeholder"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:errorTextColor="@color/crimson">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTxtUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/white"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Mật khẩu -->
    <!-- Author: nnhiep 09.03.2023 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_below="@id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:startIconTint="@color/white"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconTint="@color/white"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/alto"
        app:boxBackgroundColor="@color/placeholder"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:errorTextColor="@color/crimson">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:padding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button đăng nhập -->
    <!-- Author: nnhiep 09.03.2023 -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/layout_password"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/login"
        android:textSize="18dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"/>

    <!-- Text quên mật khẩu -->
    <!-- Author: nnhiep 09.03.2023 -->
    <TextView
        android:id="@+id/txtForgetPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forget_password"
        android:textSize="15dp"
        android:textColor="@color/white" />

    <!-- Text đăng nhập bằng phương thức khác -->
    <!-- Author: nnhiep 09.03.2023 -->
    <TextView
        android:id="@+id/txtOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/socialicons"
        android:text="@string/other_login"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"/>

    <!--Layout bên dưới app -->
    <!-- Author: nnhiep 09.03.2023 -->
    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/google"/>

        <ImageView android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/fb"/>

        <ImageView android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/twitter"/>

    </LinearLayout>

</RelativeLayout>